[package]
name = "ip-extract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json", "stream"] }
tokio = { version = "1.23.1", features = ["full"] }
zip = "0.6.2"
